# Sentinel-v1

./: .gitignore  CMakeLists.txt  README.md  setup.sh
Training/: detection.py
llm_service/: app.py
src/: main.cpp
src/app/: pipeline.cpp  pipeline.h
src/capture/: video_source.cpp  video_source.h
src/detection/: detector.cpp  detector.h  yolo_onnx.cpp  yolo_onnx.h
src/events/: event_engine.cpp  event_engine.h
src/reasoning/: llm_client.cpp  llm_client.h  scene_state.cpp  scene_state.h
src/tracking/: tracker.cpp  tracker.h
src/ui/: overlay_renderer.cpp  overlay_renderer.h
src/utils/: timer.cpp  timer.h
src/zones/: zone_manager.cpp  zone_manager.h
